--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 	<link rel="icon" href="https://prasadmudedla.github.io/favicon.ico" type="image/png">
 
-	<link href="./Veer_ Awesome QA_files/css" rel="stylesheet">
-	<link href="./Veer_ Awesome QA_files/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="./Veer_ Awesome QA_files/reset.css">
-	<link rel="stylesheet" href="./Veer_ Awesome QA_files/styles.css">
-	<link rel="stylesheet" href="./Veer_ Awesome QA_files/white-grey.css">
+	<link href="files/css" rel="stylesheet">
+	<link href="files/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="files/reset.css">
+	<link rel="stylesheet" href="files/styles.css">
+	<link rel="stylesheet" href="files/white-grey.css">
 	<!--<link rel="stylesheet" href="css/themes/indigo-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
